--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "server": "json-server -p 3001 --watch db.json"
   },
   "dependencies": {
+    "@splidejs/react-splide": "^0.7.12",
     "axios": "^1.4.0",
     "json-server": "^0.17.3",
     "localforage": "^1.10.0",
