--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@splidejs/react-splide": "^0.7.12",
     "axios": "^1.4.0",
+    "framer-motion": "^10.12.16",
     "json-server": "^0.17.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
