--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "server": "json-server -p 3001 --watch db.json"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@splidejs/react-splide": "^0.7.12",
     "axios": "^1.4.0",
     "framer-motion": "^10.12.16",
@@ -20,6 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-redux": "^8.1.0",
     "react-router-dom": "^6.11.2",
     "sort-by": "^1.2.0"
   },
